--- a/application-express/package.json
+++ b/application-express/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.2.5",
     "jade": "*",
-    "htmlparser2": "*"
+    "htmlparser2": "*",
+    "browserify-middleware": "~1.13.0"
   }
 }
