cleanup: pas besoin de htmlparser et donc browserify pour le moment. Possible que presentation-demo.html soit supprimée avec ce commit alors just creez en une à partir de presentation-demo-backup.html

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,7 @@
 *~
 /application-express/node_modules
 npm-debug.log
+application-express/espace-utilisateur/enseignants/jberger/presentation-demo.html
 
 # Fichier pdf
 *.pdf
-
-
-npm-debug.log
